repir encoder and decoder