@@ -3,6 +3,7 @@ package com.heima.utils.common;
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
+import java.util.Base64;
 import java.util.zip.*;
 
 
@@ -39,7 +40,8 @@ public class ZipUtils {
                 }
             }
         }
-        return new sun.misc.BASE64Encoder().encode(out.toByteArray());
+        Base64.Encoder encoder = Base64.getEncoder();
+        return encoder.encodeToString(out.toByteArray());
     }
 
 
@@ -63,7 +65,8 @@ public class ZipUtils {
         byte[] compressed = null;
         String decompressed = null;
         try {
-            compressed = new sun.misc.BASE64Decoder().decodeBuffer(compressedStr);
+            Base64.Decoder decoder = Base64.getDecoder();
+            compressed = decoder.decode(compressedStr);
             in = new ByteArrayInputStream(compressed);
             ginzip = new GZIPInputStream(in);
 
@@ -122,7 +125,8 @@ public class ZipUtils {
             zout.write(str.getBytes());
             zout.closeEntry();
             compressed = out.toByteArray();
-            compressedStr = new sun.misc.BASE64Encoder().encodeBuffer(compressed);
+            Base64.Encoder encoder = Base64.getEncoder();
+            compressedStr = encoder.encodeToString(compressed);
         } catch (IOException e) {
             compressed = null;
         } finally {
@@ -160,7 +164,8 @@ public class ZipUtils {
         ZipInputStream zin = null;
         String decompressed = null;
         try {
-            byte[] compressed = new sun.misc.BASE64Decoder().decodeBuffer(compressedStr);
+            Base64.Decoder decoder = Base64.getDecoder();
+            byte[] compressed = decoder.decode(compressedStr);
             out = new ByteArrayOutputStream();
             in = new ByteArrayInputStream(compressed);
             zin = new ZipInputStream(in);
